<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <item android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass = "android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/category"
          android:title="@string/categoryMain"
          android:icon="@drawable/ic_filter_list_black_24dp"
          app:showAsAction="always">

        <menu>
            <item android:id="@+id/subitem1"
                android:title="@string/category1"/>

            <item android:id="@+id/subitem2"
                android:title="@string/category2"/>

            <item android:id="@+id/subitem3"
                android:title="@string/category3"/>

            <item android:id="@+id/subitem4"
                android:title="@string/category4"/>

            <item android:id="@+id/subitem5"
                android:title="@string/category5"/>

            <item android:id="@+id/subitem6"
                android:title="@string/category6"/>

        </menu>

    </item>


</menu>